uf_ulog_macro/tests/ui/fail_generics.rs
#[derive(uf_ulog_macro::ULogData)]
struct GenericMsg<T> {
    timestamp: u64,
    value: T,
}

fn main() {}
